# coasts

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  cli-update-policy.json  clippy.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  update-policy.yml
Formula/: coast.rb
coast-cli/: Cargo.toml
coast-cli/src/: i18n_helper.rs  lib.rs  main.rs
coast-cli/src/commands/: agent_shell.rs  archive.rs  assign.rs  build.rs  builds.rs  checkout.rs  config.rs  daemon.rs  dns.rs  docker.rs  docs.rs  doctor.rs  exec.rs  installation_prompt.rs  logs.rs  lookup.rs  ls.rs  mcp.rs  mod.rs  ports.rs  ps.rs  rebuild.rs  rerun_extractors.rs  restart_services.rs  rm.rs  rm_build.rs  run.rs  search_docs.rs  secret.rs  shared.rs  skills_prompt.rs  start.rs  stop.rs  ui.rs  unassign.rs  update.rs
coast-core/: Cargo.toml
coast-core/src/: artifact.rs  error.rs  lib.rs  volume.rs
coast-core/src/coastfile/: field_parsers.rs  mod.rs  raw_types.rs  serializer.rs  tests_inheritance.rs  tests_parsing.rs
coast-core/src/protocol/: agent_shell.rs  api_types.rs  build.rs  builds.rs  events.rs  instance.rs  mcp.rs  mod.rs  query.rs  secret_shared.rs  tests.rs
coast-core/src/types/: assign.rs  instance.rs  mcp.rs  mod.rs  runtime.rs  service.rs  tests.rs  volume.rs
coast-daemon/: Cargo.toml  build.rs
coast-daemon/src/: analytics.rs  bare_services.rs  dns.rs  docs_assets.rs  git_watcher.rs  image_loader.rs  lib.rs  main.rs  port_manager.rs  server.rs  shared_services.rs
coast-daemon/src/api/: mod.rs  routes.rs  streaming.rs  tests.rs  websocket.rs  ws_exec.rs  ws_host_service_exec.rs  ws_host_service_logs.rs  ws_host_service_stats.rs  ws_host_terminal.rs  ws_logs.rs  ws_lsp.rs  ws_service_exec.rs  ws_service_stats.rs  ws_stats.rs
coast-daemon/src/api/query/: builds.rs  config.rs  docker.rs  docs.rs  files.rs  images.rs  mcp.rs  mod.rs  project_git.rs  secrets.rs  services.rs  settings.rs  volumes.rs
coast-daemon/src/handlers/: agent_shell.rs  archive.rs  assign.rs  build.rs  builds.rs  checkout.rs  docs.rs  exec.rs  logs.rs  lookup.rs  ls.rs  mcp.rs  mod.rs  ports.rs  ps.rs  rebuild.rs  rerun_extractors.rs  restart_services.rs  rm.rs  rm_build.rs  secret.rs  set_analytics.rs  set_language.rs  shared.rs  start.rs  stop.rs  unassign.rs
coast-daemon/src/handlers/assign/: explain.rs  gitignored_sync.rs  mod.rs  services.rs  worktree.rs
coast-daemon/src/handlers/run/: archive_build.rs  compose_rewrite.rs  finalize.rs  host_builds.rs  image_loading.rs  mcp_setup.rs  mod.rs  provision.rs  secrets.rs  shared_services_setup.rs  validate.rs
coast-daemon/src/state/: agent_shells.rs  instances.rs  mod.rs  ports.rs  settings.rs  shared_services.rs  user_config.rs
coast-docker/: Cargo.toml
coast-docker/src/: compose.rs  compose_build.rs  container.rs  dind.rs  image_cache.rs  lib.rs  network.rs  podman.rs  runtime.rs  sysbox.rs
coast-guard/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
coast-guard/scripts/: generate-docs.mjs
coast-guard/src/: App.tsx  i18n.ts  index.css  main.tsx  speech.d.ts
coast-i18n/: Cargo.toml
coast-i18n/locales/: en.json  es.json  ja.json  ko.json  pt.json  ru.json  zh.json
coast-i18n/src/: lib.rs
coast-i18n/tests/: coverage.rs
coast-secrets/: Cargo.toml
coast-secrets/src/: extractor.rs  inject.rs  keystore.rs  lib.rs
coast-secrets/src/extractors/: command.rs  custom.rs  env.rs  file.rs  keychain.rs  mod.rs
coast-update/: Cargo.toml
coast-update/src/: checker.rs  error.rs  lib.rs  policy.rs  updater.rs  version.rs
common-extractors/: README.md  coast-extractor-keychain
docs/: GETTING_STARTED.md  README.md  SKILLS_FOR_HOST_AGENTS.md  VIDEO_TUTORIALS.md  doc_ordering.txt  installation_prompt.txt  skills_prompt.txt
docs/coastfiles/: AGENT_SHELL.md  ASSIGN.md  INHERITANCE.md  MCP.md  PORTS.md  PROJECT.md  README.md  SECRETS.md  SERVICES.md  SHARED_SERVICES.md  VOLUMES.md
docs/concepts_and_terminology/: AGENT_SHELLS.md  ASSIGN.md  BARE_SERVICES.md  BUILDS.md  CHECKOUT.md  CLI.md  COASTFILE_TYPES.md  COASTGUARD.md  COASTS.md  DAEMON.md  EXEC_AND_DOCKER.md  FILESYSTEM.md  LOGS.md  LOOKUP.md  MCP_SERVERS.md  PERFORMANCE_OPTIMIZATIONS.md  PORTS.md  PRIMARY_PORT_AND_DNS.md  README.md  RUNTIMES_AND_SERVICES.md  SECRETS.md  SHARED_SERVICES.md  TROUBLESHOOTING.md  VOLUMES.md
docs/es/: GETTING_STARTED.md  README.md  SKILLS_FOR_HOST_AGENTS.md  VIDEO_TUTORIALS.md  doc_ordering.txt  installation_prompt.txt  skills_prompt.txt
docs/harnesses/: CONDUCTOR.md  README.md
docs/ja/: GETTING_STARTED.md  README.md  SKILLS_FOR_HOST_AGENTS.md  VIDEO_TUTORIALS.md  doc_ordering.txt  installation_prompt.txt  skills_prompt.txt
docs/ko/: GETTING_STARTED.md  README.md  SKILLS_FOR_HOST_AGENTS.md  VIDEO_TUTORIALS.md  doc_ordering.txt  installation_prompt.txt  skills_prompt.txt
docs/pt/: GETTING_STARTED.md  README.md  SKILLS_FOR_HOST_AGENTS.md  VIDEO_TUTORIALS.md  (+3 more)
integrated-examples/: README.md  benchmark.sh  helpers.sh  setup.sh  test.sh  test_agent_shell.sh  test_assign.sh  test_bare_services.sh  test_checkout.sh  test_claude.sh  test_cleanup_shared_services_volume.sh  test_coastfile_types.sh  test_egress.sh  test_error_cases.sh  test_hmr.sh  test_lifecycle.sh  test_lookup.sh  test_mcp.sh  test_multi_project.sh  test_no_compose.sh  test_observability.sh  test_restart_services.sh  test_secrets.sh  test_sync.sh  test_volume_isolated.sh  test_volume_shared.sh  test_volume_shared_services.sh  test_volume_source.sh  test_worktree_daemon_restart.sh  test_worktree_delete.sh
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: coastfile_integration.rs  integration_test.rs  secret_integration.rs
scripts/: docs-i18n.py  generate-search-index.py  test-release.sh
search-indexes/: docs-search-index-en.json  docs-search-index-es.json  docs-search-index-ja.json  docs-search-index-ko.json  docs-search-index-pt.json  docs-search-index-ru.json  docs-search-index-zh.json
translation-state/: state.json
(+392 files in other folders)
