[package]
name = "coast-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
shellexpand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }

ts-rs = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
