[package]
name = "coast-docker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
coast-core = { path = "../coast-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bollard = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures-util = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
